# DesktopMania

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-actions-demo.yml  rust.yml
src/: lib.rs  main.rs
token_generation/: Cargo.toml
token_generation/src/: auth.rs  handler.rs  main.rs  model.rs
user_enrolment/: Cargo.toml
user_enrolment/migrations/2022-02-28-182038_users/: up.sql
user_enrolment/migrations/2022-03-01-141929_confirmations/: up.sql
user_enrolment/src/: config.rs  email_service.rs  errors.rs  main.rs  model.rs  register_handler.rs  schema.rs
