[package]
name = "rust-blogpost-auth-asynchronous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coverage = []

[dependencies]
# for token
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-ioframe = "0.4.1"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.1"
lettre = { git = "https://github.com/lettre/lettre" }
native-tls = "0.2.4"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0" # a voir
serde_json = "1.0" # a voir
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9"
actix-rt = "1.0.0"
jsonwebtoken = "7.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
yarte = {version= "0.15.6"}


[build-dependencies]
yarte = { version = "0.15.6"}

# for user enrolment
